[gd_scene load_steps=6 format=3 uid="uid://bdkkaei4jpfg0"]

[ext_resource type="Script" path="res://main.gd" id="1_ncdrw"]
[ext_resource type="PackedScene" uid="uid://wuyiipsoh7er" path="res://player.tscn" id="1_y338x"]
[ext_resource type="PackedScene" uid="uid://yaj1u5aqasoo" path="res://coin.tscn" id="2_nelqo"]
[ext_resource type="Texture2D" uid="uid://bdexn4jhhq7dq" path="res://assets/grass.png" id="3_0hpr5"]
[ext_resource type="PackedScene" uid="uid://dngok2g7t2q1o" path="res://hud.tscn" id="5_7c8n6"]

[node name="Main" type="Node"]
script = ExtResource("1_ncdrw")
coin = ExtResource("2_nelqo")
play_time = 30

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0hpr5")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_y338x")]

[node name="CoinsContainer" type="Node" parent="."]

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(240, 350)

[node name="Gametimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_7c8n6")]

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="Gametimer" to="." method="_on_gametimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
